--- a/src/index.scss
+++ b/src/index.scss
@@ -185,11 +185,22 @@ img {
         }
     }
 
+    .dropdown {
+        width: 20px!important;
+        .txt{
+            display: none!important;
+        }
+
+        i {
+            font-size: 20px!important;
+        }
+    }
+
     .form__input {
         width: 100%!important;
         box-shadow: 0px 8px 14px rgba(0, 0, 0, 0.05);
         margin: 0!important;
-        padding: 0!important;
+        padding: 5px!important;
     
         * {
             border: none!important;
